--- a/dev-server/app/static-assets/sass/style.sass
+++ b/dev-server/app/static-assets/sass/style.sass
@@ -219,3 +219,15 @@ table
     color: white
     border-radius: 5px
 
+
+::-webkit-scrollbar
+  width: 12px
+::-webkit-scrollbar-track
+  -webkit-border-radius: 10px
+  border-radius: 10px
+::-webkit-scrollbar-thumb
+  -webkit-border-radius: 10px
+  border-radius: 10px
+  background: $main-color
+::-webkit-scrollbar-thumb:window-inactive 
+  background: lighten($main-color,10%)
