--- a/dev-server/app/static-assets/css/styles.css
+++ b/dev-server/app/static-assets/css/styles.css
@@ -112,12 +112,42 @@ nav {
   padding: 20px;
   z-index: 8;
   transition: left 0.4s ease;
+  border-bottom: 1px solid #29b8ed;
 }
 .mobile-find-field input {
   color: #000;
   font-size: 1.4rem;
   border-bottom: 1px solid #000;
   background-color: transparent;
+}
+
+.mobile-find-field-closing {
+  position: absolute;
+  right: 16px;
+}
+
+.mobile-find-field-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.mobile-search-results {
+  margin: 10px;
+  display: none;
+  flex-direction: column;
+  font-size: 1.2em;
+  max-height: 160px;
+  overflow: overlay;
+}
+.mobile-search-results li {
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  border-bottom: 1px solid #ccc;
+}
+.mobile-search-results li:hover {
+  background: #ccc;
+  cursor: pointer;
 }
 
 @media (max-width: 585px) {
@@ -143,6 +173,7 @@ nav {
 
   .mobile-find-field {
     display: flex;
+    flex-direction: column;
   }
 
   .find-box {
@@ -183,12 +214,12 @@ nav {
   padding: 3px;
   border: 1px solid #ccc;
 }
+.find-box:hover > .find-btn {
+  background: #ddd;
+}
 .find-box:hover > .find-txt {
   width: 200px;
   padding: 0 10px;
-}
-.find-box:hover > .find-btn {
-  background: #ddd;
 }
 
 .find-btn {
@@ -225,11 +256,6 @@ nav {
   padding: 0 10px;
 }
 
-.mobile-find-field-closing {
-  position: absolute;
-  right: 16px;
-}
-
 .global-search-results {
   display: none;
   position: absolute;
@@ -257,20 +283,6 @@ nav {
 }
 .global-search-results li:first-child {
   border-radius: 10px 10px 0 0;
-}
-
-::-webkit-scrollbar {
-  width: 12px;
-}
-
-::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
 .google-map {
@@ -1083,6 +1095,25 @@ table th:hover {
   background-color: #29b8ed;
   color: white;
   border-radius: 5px;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: #29b8ed;
+}
+
+::-webkit-scrollbar-thumb:window-inactive {
+  background: #58c8f1;
 }
 
 /*# sourceMappingURL=styles.css.map */
