--- a/dev-server/app/static-assets/sass/_header-style.sass
+++ b/dev-server/app/static-assets/sass/_header-style.sass
@@ -81,11 +81,36 @@ nav
   padding: 20px
   z-index: 8
   transition: left 0.4s ease
+  border-bottom: 1px solid $main-color
   input
     color: #000
     font-size: 1.4rem
     border-bottom: 1px solid #000
     background-color: transparent
+    
+.mobile-find-field-closing
+  position: absolute
+  right: 16px
+
+.mobile-find-field-wrapper
+  display: flex
+  justify-content: center
+
+.mobile-search-results
+  margin: 10px
+  display: none
+  flex-direction: column
+  font-size: 1.2em
+  max-height: 160px
+  overflow: overlay
+  li
+    padding: 10px
+    display: flex
+    flex-direction: row
+    border-bottom: 1px solid #ccc
+    &:hover
+      background: #ccc
+      cursor: pointer
 
 @media (max-width: 585px)
   .floating-menu
@@ -101,6 +126,7 @@ nav
     margin: 5px
   .mobile-find-field
     display: flex
+    flex-direction: column
   .find-box
     display: none
 
