--- a/t-port/src/css/styles.css
+++ b/t-port/src/css/styles.css
@@ -171,17 +171,8 @@ header {
     margin: 0;
   }
 
-  nav {
-    flex-direction: column;
-  }
-
   .navigation-bar__item {
     margin: 5px;
-  }
-
-  .mobile-find-field {
-    display: flex;
-    flex-direction: column;
   }
 
   .global-search {
@@ -714,28 +705,32 @@ footer {
     width: 95%;
   }
 }
+.burger-navigation-bar {
+  position: absolute;
+  left: 0;
+  z-index: 8;
+  transition: top 0.4s ease;
+  top: 0;
+}
+
+@media (max-width: 875px) {
+  .burger-navigation-bar {
+    display: flex;
+    background: #f2f2f2;
+    width: 100%;
+    justify-content: center;
+    padding: 20px;
+  }
+}
+@media (max-width: 585px) {
+  nav {
+    display: flex;
+    flex-direction: column;
+  }
+}
 .fixed-favorites {
   position: fixed;
   top: 120px;
-}
-
-.floating-menu {
-  display: none;
-}
-
-.close-pic {
-  cursor: pointer;
-}
-.close-pic:hover {
-  color: #29b8ed;
-}
-
-.floating-menu {
-  position: absolute;
-  left: 0;
-  top: -130px;
-  z-index: 8;
-  transition: top 0.4s ease;
 }
 
 .mobile-find-field {
@@ -791,15 +786,7 @@ footer {
   left: 0;
 }
 
-.show-menu {
-  top: 62px;
-}
-
 @media (max-width: 585px) {
-  .floating-menu {
-    top: -130px;
-  }
-
   .header-buttons > div {
     margin: 0 5px;
   }
@@ -823,23 +810,6 @@ footer {
 
   .find-box {
     display: none;
-  }
-}
-@media (max-width: 875px) {
-  .floating-menu {
-    display: flex;
-    background: #f2f2f2;
-    width: 100%;
-    justify-content: center;
-    padding: 20px;
-  }
-
-  .navigation-bar {
-    display: none;
-  }
-
-  .header__burger-wrapper {
-    display: block;
   }
 }
 .found-route-menu {
