--- a/t-port/src/sass/_menus.sass
+++ b/t-port/src/sass/_menus.sass
@@ -126,27 +126,32 @@
     left: 0
     width: 95%
 
+.burger-navigation-bar
+  position: absolute
+  left: 0
+  //top: -130px
+  z-index: 8
+  transition: top 0.4s ease
+  top: 0
+
+@media (max-width: 875px)
+  .burger-navigation-bar
+    display: flex
+    background: #f2f2f2
+    width: 100%
+    justify-content: center
+    padding: 20px
+
+@media (max-width: 585px)
+  nav
+    display: flex
+    flex-direction: column
+
 //to consider
 
 .fixed-favorites
   position: fixed
   top: 120px
-
-
-.floating-menu
-  display: none
-
-.close-pic
-  cursor: pointer
-  &:hover
-    color: $main-color
-
-.floating-menu
-  position: absolute
-  left: 0
-  top: -130px
-  z-index: 8
-  transition: top 0.4s ease
 
 .mobile-find-field
   position: absolute
@@ -193,12 +198,9 @@
 .show-mobile-search
   left: 0
 
-.show-menu
-  top: 62px
-
 @media (max-width: 585px)
-  .floating-menu
-    top: -130px
+  //.floating-menu
+  //  top: -130px
   .header-buttons > div
       margin: 0 5px
   header
@@ -213,18 +215,6 @@
     flex-direction: column
   .find-box
     display: none
-
-@media (max-width: 875px)
-  .floating-menu
-    display: flex
-    background: #f2f2f2
-    width: 100%
-    justify-content: center
-    padding: 20px
-  .navigation-bar
-    display: none
-  .header__burger-wrapper
-    display: block
     
 .found-route-menu
   display: none
