--- a/t-port/src/sass/_menus.sass
+++ b/t-port/src/sass/_menus.sass
@@ -129,6 +129,7 @@
 .burger-navigation-bar
   position: absolute
   left: 0
+  display: none
   //top: -130px
   z-index: 8
   transition: top 0.4s ease
@@ -147,17 +148,13 @@
     display: flex
     flex-direction: column
 
-//to consider
-
-.fixed-favorites
-  position: fixed
-  top: 120px
-
-.mobile-find-field
+.mobile-global-search
   position: absolute
-  top: 62px
-  left: -102%
-  display: none
+  top: 0
+  //left: -102%
+  left: 0 //to_change
+  //display: none
+  display: flex //to_change
   background: #f2f2f2
   width: 100%
   justify-content: center
@@ -170,16 +167,16 @@
     font-size: 1.4rem
     border-bottom: 1px solid #000
     background-color: transparent
-    
-.mobile-find-field-closing
+
+.mobile-global-search__field-wrapper
+  display: flex
+  justify-content: center    
+
+.mobile-global-search__button--close
   position: absolute
   right: 16px
 
-.mobile-find-field-wrapper
-  display: flex
-  justify-content: center
-
-.mobile-search-results
+.mobile-global-search-results
   margin: 10px
   display: none
   flex-direction: column
@@ -195,8 +192,17 @@
       background: #ccc
       cursor: pointer
 
-.show-mobile-search
+.show-mobile-search //to_consider
   left: 0
+
+
+//to consider
+
+.fixed-favorites
+  position: fixed
+  top: 120px
+
+
 
 @media (max-width: 585px)
   //.floating-menu
