--- a/t-port/src/sass/style.sass
+++ b/t-port/src/sass/style.sass
@@ -44,6 +44,12 @@ main
     margin: 0
     border-radius: 0
 
+.icon--closing
+  font-size: 24px
+  &:hover
+    color: $main-color
+    cursor: pointer
+
 ::-webkit-scrollbar
   width: 12px
 ::-webkit-scrollbar-track
