--- a/t-port/src/sass/_menus.sass
+++ b/t-port/src/sass/_menus.sass
@@ -49,6 +49,10 @@
   &:hover
     background: lighten($main-color,20%)
 
+
+
+// Login menu
+
 .menu--login
   //opacity: 0
   position: absolute
@@ -74,6 +78,10 @@
     transform: translate3d(-4px, 0, 0)
   40%, 60% 
     transform: translate3d(4px, 0, 0)
+
+
+
+// Favorites menu
 
 .menu--favorites
   //opacity: 0
@@ -126,6 +134,10 @@
     left: 0
     width: 95%
 
+
+
+// Burger Navigation bar
+
 .burger-navigation-bar
   position: absolute
   left: 0
@@ -147,6 +159,11 @@
   nav
     display: flex
     flex-direction: column
+
+
+
+
+// Mobile Global Search
 
 .mobile-global-search
   position: absolute
@@ -192,8 +209,40 @@
       background: #ccc
       cursor: pointer
 
-.show-mobile-search //to_consider
+
+
+// Find A Route Menu
+
+.menu--find-a-route
+  position: absolute
+  top: 0
   left: 0
+  z-index: 5
+  transition: all 0.4s ease
+  .menu--find-a-route__button--wrapped
+    display: none
+
+.menu--find-a-route-content
+  display: flex
+  flex-direction: column
+  align-items: center
+  
+.find-a-route-wrapped   //TO CONSIDER
+  width: 50px
+  height: 50px
+  display: flex
+  justify-content: center
+  align-items: center
+  .find-a-route-content
+    display: none
+  .menu--find-a-route__button--wrapped
+    display: block
+    font-size: 1.4em
+    cursor: pointer
+  &:hover
+    color: $main-color
+
+
 
 
 //to consider
@@ -202,25 +251,6 @@
   position: fixed
   top: 120px
 
-
-
-@media (max-width: 585px)
-  //.floating-menu
-  //  top: -130px
-  .header-buttons > div
-      margin: 0 5px
-  header
-    h1
-      margin: 0
-  nav
-    flex-direction: column
-  .nav-item
-    margin: 5px
-  .mobile-find-field
-    display: flex
-    flex-direction: column
-  .find-box
-    display: none
     
 .found-route-menu
   display: none
@@ -291,58 +321,6 @@
       top: 50%
     &:last-of-type:after
       top: -50%
-
-.find-a-route-menu
-  position: absolute
-  top: 0
-  left: 0
-  z-index: 3
-  transition: all 0.4s ease
-  background: #eee
-  padding: 10px
-  margin: 10px
-  border-radius: 10px
-  border: 1px solid $main-color
-  .route-wrapped-ico
-    display: none
-
-.find-a-route-content
-  display: flex
-  flex-direction: column
-  align-items: center
-  h2
-    font-family: $menus-font
-    font-size: 1.7em
-    margin: 10px
-
-.find-a-route-wrapped
-  width: 50px
-  height: 50px
-  display: flex
-  justify-content: center
-  align-items: center
-  .closing-button
-    display: none
-  .find-a-route-content
-    display: none
-  .route-wrapped-ico
-    display: block
-    font-size: 1.4em
-    cursor: pointer
-  &:hover
-    color: $main-color
-
-.find-a-route-inputs
-  width: 100%
-  margin: 10px 0
-  padding: 5px 10px
-  border-radius: 10px
-  background: #ddd
-  color: #000
-  font-family: $main-font
-  font-size: 1.2em
-  &:focus
-    background: #fff
 
 .show-additional-menu
   opacity: 1
