--- a/t-port/src/css/styles.css
+++ b/t-port/src/css/styles.css
@@ -619,7 +619,7 @@ footer {
 .menu--login {
   position: absolute;
   transition: opacity 0.4s ease;
-  top: 0;
+  top: 60px;
   right: 0;
   z-index: 5;
 }
@@ -649,7 +649,7 @@ footer {
 .menu--favorites {
   transition: opacity 0.4s ease;
   position: absolute;
-  top: 0;
+  top: 60px;
   right: 0;
   z-index: 5;
 }
@@ -711,7 +711,7 @@ footer {
   display: none;
   z-index: 8;
   transition: top 0.4s ease;
-  top: 0;
+  top: 62px;
 }
 
 @media (max-width: 875px) {
@@ -731,7 +731,7 @@ footer {
 }
 .mobile-global-search {
   position: absolute;
-  top: 0;
+  top: 62px;
   left: 0;
   display: flex;
   background: #f2f2f2;
