--- a/t-port/src/sass/_menus.sass
+++ b/t-port/src/sass/_menus.sass
@@ -57,7 +57,7 @@
   //opacity: 0
   position: absolute
   transition: opacity 0.4s ease
-  top: 0
+  top: 60px
   right: 0
   z-index: 5
   //z-index: -1
@@ -87,7 +87,7 @@
   //opacity: 0
   transition: opacity 0.4s ease
   position: absolute
-  top: 0
+  top: 60px
   right: 0
   //z-index: -1
   z-index: 5
@@ -145,7 +145,7 @@
   //top: -130px
   z-index: 8
   transition: top 0.4s ease
-  top: 0
+  top: 62px
 
 @media (max-width: 875px)
   .burger-navigation-bar
@@ -167,7 +167,7 @@
 
 .mobile-global-search
   position: absolute
-  top: 0
+  top: 62px
   //left: -102%
   left: 0 //to_change
   //display: none
