--- a/t-port/src/css/styles.css
+++ b/t-port/src/css/styles.css
@@ -621,7 +621,13 @@ footer {
   transition: opacity 0.4s ease;
   top: 60px;
   right: 0;
-  z-index: 5;
+  z-index: 3;
+  opacity: 0;
+}
+
+.menu--login--active {
+  z-index: 8;
+  opacity: 1;
 }
 
 .menu--login--failed-animation {
@@ -651,7 +657,13 @@ footer {
   position: absolute;
   top: 60px;
   right: 0;
-  z-index: 5;
+  z-index: 3;
+  opacity: 0;
+}
+
+.menu--favorites--active {
+  z-index: 8;
+  opacity: 1;
 }
 
 .menu--favorites-list {
@@ -709,8 +721,12 @@ footer {
   position: absolute;
   left: 0;
   display: none;
+  top: -130px;
   z-index: 8;
   transition: top 0.4s ease;
+}
+
+.burger-navigation-bar--active {
   top: 62px;
 }
 
@@ -732,7 +748,7 @@ footer {
 .mobile-global-search {
   position: absolute;
   top: 62px;
-  left: 0;
+  left: -102%;
   display: flex;
   background: #f2f2f2;
   width: 100%;
@@ -776,6 +792,10 @@ footer {
 .mobile-global-search-results li:hover {
   background: #ccc;
   cursor: pointer;
+}
+
+.mobile-global-search--active {
+  left: 0;
 }
 
 .menu--find-a-route {
@@ -995,7 +1015,7 @@ main {
   margin: 5px;
   border-radius: 10px;
   background: #f8f8f8;
-  z-index: 3;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   align-items: center;
