--- a/t-port/src/sass/_menus.sass
+++ b/t-port/src/sass/_menus.sass
@@ -54,13 +54,16 @@
 // Login menu
 
 .menu--login
-  //opacity: 0
   position: absolute
   transition: opacity 0.4s ease
   top: 60px
   right: 0
-  z-index: 5
-  //z-index: -1
+  z-index: 3
+  opacity: 0
+  
+.menu--login--active
+  z-index: 8
+  opacity: 1
 
 .menu--login--failed-animation
     background: #fbd2ce
@@ -84,13 +87,16 @@
 // Favorites menu
 
 .menu--favorites
-  //opacity: 0
   transition: opacity 0.4s ease
   position: absolute
   top: 60px
   right: 0
-  //z-index: -1
-  z-index: 5
+  z-index: 3
+  opacity: 0
+
+.menu--favorites--active
+  z-index: 8
+  opacity: 1
 
 .menu--favorites-list
   display: flex
@@ -142,9 +148,11 @@
   position: absolute
   left: 0
   display: none
-  //top: -130px
+  top: -130px
   z-index: 8
   transition: top 0.4s ease
+
+.burger-navigation-bar--active
   top: 62px
 
 @media (max-width: 875px)
@@ -168,10 +176,8 @@
 .mobile-global-search
   position: absolute
   top: 62px
-  //left: -102%
-  left: 0 //to_change
-  //display: none
-  display: flex //to_change
+  left: -102%
+  display: flex
   background: #f2f2f2
   width: 100%
   justify-content: center
@@ -208,6 +214,9 @@
     &:hover
       background: #ccc
       cursor: pointer
+
+.mobile-global-search--active
+  left: 0
 
 
 
