--- a/t-port/src/css/styles.css
+++ b/t-port/src/css/styles.css
@@ -621,12 +621,13 @@ footer {
   transition: opacity 0.4s ease;
   top: 60px;
   right: 0;
-  z-index: 3;
+  z-index: 8;
+  visibility: hidden;
   opacity: 0;
 }
 
 .menu--login--active {
-  z-index: 8;
+  visibility: visible;
   opacity: 1;
 }
 
@@ -657,13 +658,14 @@ footer {
   position: absolute;
   top: 60px;
   right: 0;
-  z-index: 3;
   opacity: 0;
+  z-index: 8;
+  visibility: hidden;
 }
 
 .menu--favorites--active {
-  z-index: 8;
   opacity: 1;
+  visibility: visible;
 }
 
 .menu--favorites-list {
