--- a/t-port/src/css/styles.css
+++ b/t-port/src/css/styles.css
@@ -724,12 +724,14 @@ footer {
   left: 0;
   display: none;
   top: -130px;
+  visibility: hidden;
   z-index: 8;
   transition: top 0.4s ease;
 }
 
 .burger-navigation-bar--active {
   top: 62px;
+  visibility: visible;
 }
 
 @media (max-width: 875px) {
@@ -751,6 +753,7 @@ footer {
   position: absolute;
   top: 62px;
   left: -102%;
+  visibility: hidden;
   display: flex;
   background: #f2f2f2;
   width: 100%;
@@ -765,6 +768,11 @@ footer {
   font-size: 1.4rem;
   border-bottom: 1px solid #000;
   background-color: transparent;
+}
+
+.mobile-global-search--active {
+  left: 0;
+  visibility: visible;
 }
 
 .mobile-global-search__field-wrapper {
@@ -794,10 +802,6 @@ footer {
 .mobile-global-search-results li:hover {
   background: #ccc;
   cursor: pointer;
-}
-
-.mobile-global-search--active {
-  left: 0;
 }
 
 .menu--find-a-route {
@@ -1003,9 +1007,17 @@ textarea {
   flex-direction: column;
 }
 
+#root {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 main {
   width: 100%;
+  height: 100%;
   display: flex;
+  flex: auto;
   flex-direction: column;
   flex-wrap: nowrap;
   align-items: center;
@@ -1028,6 +1040,18 @@ main {
   margin: 20px;
   font-family: Mission, "Mission Gothic Regular";
   font-size: 2.2em;
+}
+
+.index-google-map {
+  width: 100%;
+  height: 100%;
+  flex: auto;
+  display: contents;
+}
+.index-google-map > div {
+  width: 100%;
+  height: 100%;
+  flex: auto;
 }
 
 @media (max-width: 585px) {
