--- a/t-port/src/sass/_menus.sass
+++ b/t-port/src/sass/_menus.sass
@@ -151,11 +151,13 @@
   left: 0
   display: none
   top: -130px
+  visibility: hidden
   z-index: 8
   transition: top 0.4s ease
 
 .burger-navigation-bar--active
   top: 62px
+  visibility: visible
 
 @media (max-width: 875px)
   .burger-navigation-bar
@@ -179,6 +181,7 @@
   position: absolute
   top: 62px
   left: -102%
+  visibility: hidden
   display: flex
   background: #f2f2f2
   width: 100%
@@ -192,6 +195,10 @@
     font-size: 1.4rem
     border-bottom: 1px solid #000
     background-color: transparent
+
+.mobile-global-search--active
+  left: 0
+  visibility: visible
 
 .mobile-global-search__field-wrapper
   display: flex
@@ -216,9 +223,6 @@
     &:hover
       background: #ccc
       cursor: pointer
-
-.mobile-global-search--active
-  left: 0
 
 
 
