--- a/t-port/src/sass/style.sass
+++ b/t-port/src/sass/style.sass
@@ -13,10 +13,16 @@
 @import bases
 
 //to consider - menus, bases
+#root
+  min-height: 100%
+  display: flex
+  flex-direction: column
 
 main
   width: 100%
+  height: 100%
   display: flex
+  flex: auto
   flex-direction: column
   flex-wrap: nowrap
   align-items: center
@@ -37,6 +43,16 @@ main
   margin: 20px
   font-family: $logo-font
   font-size: 2.2em
+
+.index-google-map
+  width: 100%
+  height: 100%
+  flex: auto
+  display: contents
+  & > div
+    width: 100%
+    height: 100%
+    flex: auto
 
 @media (max-width: 585px)
   .substrate
