--- a/t-port/src/css/styles.css
+++ b/t-port/src/css/styles.css
@@ -614,6 +614,7 @@ footer {
 }
 .menu__button--submit:hover {
   background: #87d7f5;
+  cursor: pointer;
 }
 
 .menu--login {
@@ -1042,16 +1043,26 @@ main {
   font-size: 2.2em;
 }
 
-.index-google-map {
+.google-map--index {
   width: 100%;
   height: 100%;
   flex: auto;
   display: contents;
 }
-.index-google-map > div {
+.google-map--index > div {
   width: 100%;
   height: 100%;
   flex: auto;
+}
+
+.google-map--small {
+  width: 90%;
+  display: flex;
+  margin: 20px;
+}
+.google-map--small > div {
+  min-height: 320px;
+  width: 100%;
 }
 
 @media (max-width: 585px) {
