saving the currant state

--- a/t-port/src/sass/_tables.sass
+++ b/t-port/src/sass/_tables.sass
@@ -26,6 +26,7 @@ table
     vertical-align: middle
     &:hover
       background: darken($main-color,5%)
+      cursor: pointer
 
 
 .table-edit-input
