--- a/t-port/src/sass/_tables.sass
+++ b/t-port/src/sass/_tables.sass
@@ -38,10 +38,7 @@ table
   &:focus
     background: #fff
 
-.table-editor-buttons
-  padding: 0px 10px
-  text-align: center
-  &:hover
+.table-editor-buttons:hover
     color: $main-color
 
 .table__editor-tools-button
