Generating transport Card added (with an editing mode bug)

--- a/t-port/src/sass/_tables.sass
+++ b/t-port/src/sass/_tables.sass
@@ -57,6 +57,10 @@ table
     background: #fff
     cursor: pointer
 
+.table__link:hover
+  cursor: pointer
+  color: $main-color
+
 @media (max-width: 450px)
   .table__editor-tools-button
     top: -14px
