--- a/t-port/src/css/styles.css
+++ b/t-port/src/css/styles.css
@@ -386,6 +386,11 @@ table th:hover {
   cursor: pointer;
 }
 
+.table__link:hover {
+  cursor: pointer;
+  color: #29b8ed;
+}
+
 @media (max-width: 450px) {
   .table__editor-tools-button {
     top: -14px;
