--- a/t-port/src/sass/_filters.sass
+++ b/t-port/src/sass/_filters.sass
@@ -35,3 +35,21 @@
   transition: all 0.2s
   display: flex
   align-items: center
+
+.filter-wrapper
+  max-width: 250px
+  width: 100%
+  display: flex
+  flex-direction: column
+  margin: 10px
+
+.filter__input
+  width: 100%
+  border-radius: 5px
+  padding: 5px
+  border: 1px solid #ccc
+  &:hover
+    cursor: pointer
+  &:focus
+    border-color: $main-color
+    cursor: text
