--- a/t-port/src/sass/_tables.sass
+++ b/t-port/src/sass/_tables.sass
@@ -38,6 +38,7 @@ table
 
 .table-editor-buttons:hover
     color: $main-color
+    cursor: pointer
 
 .table__editor-tools-button
   position: absolute
