--- a/t-port/src/sass/_menus.sass
+++ b/t-port/src/sass/_menus.sass
@@ -115,7 +115,7 @@
     justify-content: space-between  
     .material-icons
       margin-right: 5px
-  a
+  div
     text-align: left
     padding: 5px 10px
     margin: 10px
@@ -124,6 +124,7 @@
     border-radius: 10px
     &:hover
       background: darken(#eee,10%)
+      cursor: pointer
 
 .menu__button--edit-favorites
   position: absolute
@@ -280,7 +281,7 @@
     flex-direction: row
     align-items: center
     justify-content: space-between
-    a
+    div
       text-align: left
       padding: 5px 10px
       margin: 10px
@@ -293,6 +294,7 @@
       align-items: center
       &:hover
         background: darken(#eee,10%)
+        cursor: pointer
   p
     font-size: 1.3em 
 
