--- a/t-port/src/sass/_pagination.sass
+++ b/t-port/src/sass/_pagination.sass
@@ -5,11 +5,12 @@
 
 .pagination
   display: flex
-  a
+  div
     color: black
     font-size: 1.1em
     padding: 8px 16px
     text-decoration: none
+    cursor: pointer
     &:hover:not(.active)
       background-color: #ddd
       border-radius: 5px
