--- a/t-port/src/sass/_cards.sass
+++ b/t-port/src/sass/_cards.sass
@@ -7,10 +7,14 @@
   align-items: center
   margin: 10px
   transition: opacity 0.4s ease
-  //display: none
-  //opacity: 0
-  opacity: 1 //to_delete
-  display: flex //to_delete
+  display: flex
+
+.card--modal
+  position: fixed
+  z-index: 3
+  margin: auto
+  top: 67px
+  left: 5%
 
 .card__title
   font-size: 1.5em
