--- a/t-port/src/sass/_menus.sass
+++ b/t-port/src/sass/_menus.sass
@@ -115,16 +115,17 @@
     justify-content: space-between  
     .material-icons
       margin-right: 5px
-  div
-    text-align: left
-    padding: 5px 10px
-    margin: 10px
-    width: 100%
-    background: #e1e1e1
-    border-radius: 10px
-    &:hover
-      background: darken(#eee,10%)
-      cursor: pointer
+      
+.menu--favorites-list__item
+  text-align: left
+  padding: 5px 10px
+  margin: 10px
+  width: 100%
+  background: #e1e1e1
+  border-radius: 10px
+  &:hover
+    background: darken(#eee,10%)
+    cursor: pointer
 
 .menu__button--edit-favorites
   position: absolute
