--- a/t-port/src/sass/_menus.sass
+++ b/t-port/src/sass/_menus.sass
@@ -68,11 +68,15 @@
   opacity: 1
 
 .menu--login--failed-animation
-    background: #fbd2ce
-    border: 1px solid #ff9085
-    animation-name: shake
-    animation-duration: 0.8s
-    animation-timing-function: ease-in-out
+  background: #fbd2ce
+  border: 1px solid #ff9085
+  animation-name: shake
+  animation-duration: 0.8s
+  animation-timing-function: ease-in-out
+
+.menu--login__welcome-text
+  margin: 20px
+  font-size: 1.2em
 
 @keyframes shake
   10%, 90%
