--- a/t-port/src/sass/_pagination.sass
+++ b/t-port/src/sass/_pagination.sass
@@ -11,7 +11,7 @@
     padding: 8px 16px
     text-decoration: none
     cursor: pointer
-    &:hover:not(.active)
+    &:hover:not(.pagination--active)
       background-color: #ddd
       border-radius: 5px
 
