--- a/t-port/src/sass/_menus.sass
+++ b/t-port/src/sass/_menus.sass
@@ -286,7 +286,7 @@
     flex-direction: row
     align-items: center
     justify-content: space-between
-    div
+    .menu--found-route-content__entity
       text-align: left
       padding: 5px 10px
       margin: 10px
@@ -302,6 +302,10 @@
         cursor: pointer
   p
     font-size: 1.3em 
+
+.menu--found-route-content__time
+  min-width: 50px
+
 
 .menu--found-route-content
   display: flex
