--- a/t-port/src/css/styles.css
+++ b/t-port/src/css/styles.css
@@ -501,11 +501,13 @@ table th {
 }
 
 .card--modal {
-  position: fixed;
-  z-index: 8;
+  position: absolute;
+  z-index: 13;
   margin: auto;
-  top: 67px;
+  top: 0;
+  margin: 10px 0;
   left: 5%;
+  border: 1px solid #29b8ed;
 }
 
 .card__title {
@@ -539,6 +541,15 @@ table th {
   right: 0;
   margin: 5px;
   z-index: 2;
+}
+
+.blur {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #f2f2f2;
+  opacity: 0.75;
+  z-index: 12;
 }
 
 .google-map-on-card {
