--- a/t-port/src/sass/_cards.sass
+++ b/t-port/src/sass/_cards.sass
@@ -10,11 +10,13 @@
   display: flex
 
 .card--modal
-  position: fixed
-  z-index: 8
+  position: absolute
+  z-index: 13
   margin: auto
-  top: 67px
+  top: 0
+  margin: 10px 0
   left: 5%
+  border: 1px solid #29b8ed
 
 .card__title
   font-size: 1.5em
@@ -42,6 +44,14 @@
   right: 0
   margin: 5px
   z-index: 2
+
+.blur
+  position: absolute
+  width: 100%
+  height: 100%
+  background: #f2f2f2
+  opacity: 0.75
+  z-index: 12
 
 // To_change
 .google-map-on-card
