no editing favorites when no favorites

--- a/t-port/src/css/styles.css
+++ b/t-port/src/css/styles.css
@@ -715,6 +715,11 @@ footer {
   visibility: visible;
 }
 
+.menu--favorites--fixed {
+  position: fixed;
+  top: 50px;
+}
+
 .menu--favorites-list {
   display: flex;
   flex-direction: column;
