--- a/t-port/src/sass/_menus.sass
+++ b/t-port/src/sass/_menus.sass
@@ -106,6 +106,10 @@
   opacity: 1
   visibility: visible
 
+.menu--favorites--fixed
+  position: fixed
+  top: 50px
+
 .menu--favorites-list
   display: flex
   flex-direction: column
