--- a/t-port/src/sass/_tables.sass
+++ b/t-port/src/sass/_tables.sass
@@ -22,7 +22,7 @@ table
     color: #fff
     vertical-align: middle
 
-.table__column-title:hover
+.table__column-title--sortable:hover
   background: darken($main-color,5%)
   cursor: pointer
 
