--- a/t-port/src/css/styles.css
+++ b/t-port/src/css/styles.css
@@ -344,7 +344,7 @@ table th {
   vertical-align: middle;
 }
 
-.table__column-title:hover {
+.table__column-title--sortable:hover {
   background: #14afe9;
   cursor: pointer;
 }
