--- a/t-port/src/sass/style.sass
+++ b/t-port/src/sass/style.sass
@@ -74,6 +74,32 @@ main
     color: $main-color
     cursor: pointer
 
+.add-transport-buttons
+  display: flex
+  flex-direction: row
+  justify-content: center
+  margin: 10px
+  input[type="checkbox"],
+  input[type="radio"]
+    display: none
+  input[type="checkbox"]+label:hover
+    background: darken(#ccc,5%)
+  input[type="checkbox"]:checked+label
+    background: darken(#ccc,20%)
+  input[type="checkbox"]:checked+label:hover
+    background: darken(#ccc,15%)
+    
+.add-transport-buttons__item
+  padding: 5px 7px
+  margin: 0 2px
+  -webkit-transition: all 0.2s
+  transition: all 0.2s
+  cursor: pointer
+  background: #ccc
+  border-radius: 5px
+  i
+    font-size: 20px
+
 ::-webkit-scrollbar
   width: 12px
 ::-webkit-scrollbar-track
