got rid of the remote icons

--- a/t-port/src/sass/_bases.sass
+++ b/t-port/src/sass/_bases.sass
@@ -43,7 +43,7 @@ body
   min-height: 412px
 
 @media (max-width: 450px)
-  body, .material-icons, .far, .fa
+  body, .pictorams, .far, .fa
     font-size: 3.5vw
 
 a
