--- a/t-port/src/sass/_menus.sass
+++ b/t-port/src/sass/_menus.sass
@@ -121,7 +121,7 @@
     flex-direction: row
     align-items: center
     justify-content: space-between  
-    .material-icons
+    .pictorams
       margin-right: 5px
       
 .menu--favorites-list__item
