--- a/t-port/src/css/styles.css
+++ b/t-port/src/css/styles.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @font-face {
   font-family: "Mission";
   src: url(./../fonts/Mission_Gothic_Regular.otf);
@@ -12,6 +11,28 @@
   font-family: "Mission";
   src: url(./../fonts/Mission_Gothic_Thin.otf);
 }
+@font-face {
+  font-family: "Icons";
+  font-style: normal;
+  font-weight: 400;
+  src: url(./../fonts/Icons.woff2) format("woff2");
+}
+.pictorams {
+  font-family: "Icons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-feature-settings: "liga";
+  -webkit-font-smoothing: antialiased;
+}
+
 * {
   position: relative;
   border: 0;
@@ -59,7 +80,7 @@ body {
 }
 
 @media (max-width: 450px) {
-  body, .material-icons, .far, .fa {
+  body, .pictorams, .far, .fa {
     font-size: 3.5vw;
   }
 }
@@ -158,7 +179,7 @@ header {
   color: #29b8ed;
   cursor: pointer;
 }
-.header-buttons .material-icons {
+.header-buttons .pictorams {
   font-size: 32px;
 }
 
@@ -733,7 +754,7 @@ footer {
   align-items: center;
   justify-content: space-between;
 }
-.menu--favorites-list li .material-icons {
+.menu--favorites-list li .pictorams {
   margin-right: 5px;
 }
 
@@ -1021,7 +1042,7 @@ body {
 }
 
 @media (max-width: 450px) {
-  body, .material-icons, .far, .fa {
+  body, .pictorams, .far, .fa {
     font-size: 3.5vw;
   }
 }
