--- a/t-port/src/sass/_header-style.sass
+++ b/t-port/src/sass/_header-style.sass
@@ -48,7 +48,7 @@ header
   div:hover
     color: $main-color
     cursor: pointer
-  .material-icons
+  .pictorams
     font-size: 32px
 
 @media (max-width: 585px)
